# n2-clotho

./: .gitignore  CHANGELOG.md  README.ko.md  README.md
.github/: FUNDING.yml
compiler/: Cargo.toml  README.md
compiler/examples/: auto-build.n2  soul-boot.n2  soul-full-rules.n2  test-blacklist.js
compiler/src/: ast.rs  contract.rs  grammar.pest  lib.rs  main.rs  parser.rs  query.rs  validator.rs  wasm.rs
compiler/src/codegen/: c.rs  cpp.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
docs/: 001-project-overview.md  002-qln2-architecture-research.md  003-n2-language-spec.md  004-n2-runtime-manual.md  README.md  skill-vs-n2.md
mcp/: README.md  package-lock.json  package.json  server.js
mcp/tools/: README.md  backends.js  batch.js  compile.js  inspect.js  validate.js
mcp/wasm/: n2_compiler.d.ts  n2_compiler.js  n2_compiler_bg.wasm  n2_compiler_bg.wasm.d.ts
