# n2-compiler — QLN 2.0 .n2 언어 컴파일러 프로토타입
[package]
name = "n2-compiler"
version = "0.1.0"
edition = "2024"
description = "QLN 2.0 .n2 language compiler — Rust + MD + SQL + Semantic"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
