# n2-compiler — .n2 language compiler for AI agents (Rust + WASM)
[package]
name = "n2-compiler"
version = "3.1.0"
edition = "2021"
description = "Compiled instruction language for AI agents — Rust + WASM compiler for .n2 rules"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[profile.release]
opt-level = "s"
lto = true
